#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package PSCalib
#------------------------------------------------------------------------

Package author: Mikhail S. Dubrovin

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-03-09
2016-10-19 Mikhail S. Dubrovin
- app/dcs - set cdir_def = None
- DCFileName.py - add methods *_repo, calibdir check for None and 'None'
- update doc in a few modules.
	
Tag: V00-03-08
2016-10-17 Mikhail S. Dubrovin
- app/dcs - hide test print messages

Tag: V00-03-07
2016-10-11 Mikhail S. Dubrovin
- DCMethods.py - add new methods
- the 1-st full-scale version of CLI in app/dcs

Tag: V00-03-06
2016-10-07 Mikhail S. Dubrovin
- add app/dcs
- add option to mark/delete objects for DCType, DCRange
	
Tag: V00-03-05
2016-10-03 Christopher O'Grady
- Change default EPIX common-mode params to 4,6,30,30 as requested by Silke

Tag: V00-03-04
2016-09-30 Christopher O'Grady
- Back out to previous default EPIX common-mode params: 4,6,30,10

Tag: V00-03-03
2016-09-28 Mikhail S. Dubrovin
- DCStore.save(group, mode='r+') - by default works in 'r+' mode - file is not overwritten.
- DCRange - fix issue with deleting group from file - loop over _dicstat
	
Tag: V00-03-02
2016-09-27 Mikhail S. Dubrovin
- DCMethods, DCRange - fix saving/retrieving default version, add comment to delete_version

Tag: V00-03-01
2016-09-26 Mikhail S. Dubrovin
- add/update DC*.py - the 1st full scale working version
	
Tag: V00-02-89
2016-09-08 Mikhail S. Dubrovin
- change epix100a default common mode parameters from (4,6,30,10) to (4,7,30,10)

Tag: V00-02-88
2016-08-25 Mikhail S. Dubrovin
- first version of the Detector Calibration (DC) project core

Tag: V00-02-87
2016-08-18 Mikhail S. Dubrovin
- add DC*.py modules for Detector Calibration (DC) project

Tag: V00-02-86
2016-08-05 Mikhail S. Dubrovin